--- a/style.css
+++ b/style.css
@@ -29,4 +29,10 @@ footer{
 
 footer ul{
     list-style: none;
+    padding: 0;
+}
+
+.redes li{
+    display: inline-block;
+    padding: 10px 10px 0 0;
 }
