--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
 }
 
 .navbar-brand{
-    color: white!important;
+    color: white;
 }
 
-.navbar-nav > li > a{
-    color: white!important;
+.navbar-default .navbar-nav > li > a{
+    color: white;
 }
 
 /* Jumbotron */
