Agregado altura para thumbnails en el css, y agregados textos de thumbnails

--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@
     height: 450px;
     margin-top: 50px;
 }
+/* Thumbnails noticias*/
+.thumbnail{
+    height:280px;
+    
+}
 
 /* Footer */
 footer{
