--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+h1,h2,h3,h4,h5,h6,p{
+    font-family: 'Nunito', sans-serif;
+}
+
+
+
 
 .navbar-default{
     background-color: #008CCC;
@@ -29,18 +35,17 @@
 
 #carousel-background .container h1{
     color:#ffd100;
-    font-size: 5vh;
+    font-size: 20vh;
     font-weight: 900;
     text-shadow: white;
-    text-transform: uppercase;
+
 }
 
-#carousel-background .container h1{
+#carousel-background .container h2{
     color:#ffd100;
-    font-size: 20vh;
-    font-weight: 300;
+    font-size: 10vh;
+    font-weight: 100;
     text-shadow: white;
-    text-transform: uppercase;
 }
 
 
