--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1,h2,h3,h4,h5,h6{
 
 .navbar-default .navbar-nav > .active > a:hover{
     color:#ffd100;
-    background-color: white
+    background-color: white;s
 }
 
 .icon-bar{
@@ -141,7 +141,63 @@ h1,h2,h3,h4,h5,h6{
     padding-bottom: 50px;
 }
 
-/* tituloscontainer */
+/* Nuestro equipo */
+.avatarequipo{
+    width: 32%;
+    height: 150px;
+    display: inline-block;
+    position: relative;
+    padding: 0;
+    margin:0;
+    box-sizing: border-box;
+}
+#img1{
+    background-image: url('image/equipo/edit/img1.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img2{
+    background-image: url('image/equipo/edit/img2.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img3{
+    background-image: url('image/equipo/edit/img3.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img4{
+    background-image: url('image/equipo/edit/img4.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img5{
+    background-image: url('image/equipo/edit/img5.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img6{
+    background-image: url('image/equipo/edit/img6.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img7{
+    background-image: url('image/equipo/edit/img7.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img8{
+    background-image: url('image/equipo/edit/img8.jpg');
+    background-size: cover;
+    background-position: center;
+}
+#img9{
+    background-image: url('image/equipo/edit/img9.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+/* Cómo colaborar */
 
 
 /* Thumbnails noticias*/
