--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ h1,h2,h3,h4,h5,h6{
     color: #008CCC
 }
 
+p{
+    font-size: 20
+}
+
 
 .navbar-default{
     background-color: #008CCC;
@@ -197,8 +201,45 @@ h1,h2,h3,h4,h5,h6{
     background-position: center;
 }
 
+.parrafos p{
+    font-size:16px;
+}
+
 /* Cómo colaborar */
 
+.subvoluntario1{
+    width: 220px;
+    height: 220px;
+    background-image: url('image/vivirmasfelizprincipal.jpg');
+    background-position:center;
+    background-size:cover;
+    background-repeat: no-repeat;
+    border: 3px solid #ffd100;
+    box-sizing: border-box;
+    margin: 30px auto 25px auto;
+    border-radius: 50%;
+}
+
+.subvoluntario2 p{
+    text-align: center;
+}
+
+
+.subdonacion1{
+    width: 30%;
+    margin: auto;
+    display: block;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.subdonacion1 img{
+    width: 100%;
+}
+
+.subdonacion2 p{
+    text-align: center;
+}
 
 /* Thumbnails noticias*/
 .thumbnail{
