--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ p{
 
 
 /* Círculos*/
-.quehacemos{
+.displaycenter{
     text-align: center;
 }
 
@@ -208,42 +208,48 @@ p{
 /* Cómo colaborar */
 
 .subvoluntario1{
-    width: 220px;
-    height: 220px;
+    width: 225px;
+    height: 225px;
+    position: relative;
+    box-sizing: border-box;
     background-image: url('image/vivirmasfelizprincipal.jpg');
     background-position:center;
     background-size:cover;
     background-repeat: no-repeat;
     border: 3px solid #ffd100;
-    box-sizing: border-box;
-    margin: 30px auto 25px auto;
     border-radius: 50%;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-left: auto;  
+    margin-right: auto;
 }
 
-.subvoluntario2 p{
+.text-center {
     text-align: center;
 }
-
 
 .subdonacion1{
     width: 30%;
     margin: auto;
-    display: block;
-    padding-top: 25px;
-    padding-bottom: 25px;
 }
 
 .subdonacion1 img{
     width: 100%;
+    max-height: 225px;
+    box-sizing: border-box;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
-.subdonacion2 p{
-    text-align: center;
-}
 
 /* Thumbnails noticias*/
 .thumbnail{
     height:210px; 
+}
+
+.masnoticias{
+    color: white;
+    
 }
 
 /* Footer */
