--- a/style.css
+++ b/style.css
@@ -65,15 +65,23 @@ a:hover{
     text-align: center;
 }
 
-#carousel-background{
+.carousel-background{
     height: 450px;
     width: 100%;
-    background-image: url('image/20090305-DominiqueReyes0040.jpg');
     background-position: 50% 40%;
     text-align: left;
 }
+.carousel-background-img{
+    background-image: url('image/20090305-DominiqueReyes0040.jpg');
+}
 
-#carousel-background .container h1{
+.carousel-background-img2{
+    background-image: url('image/lazogris.jpg');
+    background-position: center;
+    background-size: cover; 
+}
+
+.carousel-background .container h1{
     color:#ffd100;
     font-size: 50px;
     font-weight: 500;
@@ -100,7 +108,7 @@ a:hover{
     font-size: 4vh;
 }
 
-#carousel-background .container h2{
+.carousel-background .container h2{
     color:white;
     font-size: 20px;
     font-weight: 100;
