--- a/style.css
+++ b/style.css
@@ -289,6 +289,19 @@ a:hover{
     text-decoration: none;
     border: none;
 }
+/* paneles desplegables */
+.panel-body h3{
+    display: inline;
+}
+
+.panel-body p{
+     font-variant: small-caps;
+     display: inline-block;
+     position: relative;
+     font-weight: 900;
+     padding-left: 5px;
+     color: #949494;
+ }
 
 
 
