--- a/style.css
+++ b/style.css
@@ -301,7 +301,13 @@ a:hover{
      font-weight: 900;
      padding-left: 5px;
      color: #949494;
- }
+}
+
+/*formularios*/
+.margenes{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
 
 
 
