--- a/style.css
+++ b/style.css
@@ -164,6 +164,24 @@ a:hover{
     margin: auto;
     position: relative;
 }
+.avatarequipo2{
+    width: 49%;
+    height: 200px;
+    display: inline-block;
+}
+
+#quienes-somos{
+    width: 50%
+    padding: 25px;
+    box-sizing: border-box;
+    background-color: white;
+    float:left;
+    margin: 50%;
+    position: absolute;;
+    z-index:0.1111;
+}
+
+
 .perfil{
     text-align: center;
     background-color: rgba(0, 0, 0, 0.658);
@@ -325,7 +343,6 @@ a:hover{
 }
 .margenes{
     margin-top: 25px;
-
 }
 
 
