--- a/style.css
+++ b/style.css
@@ -318,6 +318,21 @@ a:hover{
     text-decoration: none;
     border: none;
 }
+
+.noticia img{
+    width: 100%;
+    z-index: 0.5;
+}
+.agrup{
+    box-sizing: border-box;
+    padding: 10px;
+    margin-top: -30px;
+    background-color: white;
+    z-index:0.3;
+    float: left;
+    position: relative;
+}
+
 /* paneles desplegables */
 .panel-body h3{
     display: inline;
