--- a/style.css
+++ b/style.css
@@ -257,22 +257,22 @@ a:hover{
 }
 
 .subdonacion1{
-    width: 30%;
+    width: 40%;
     margin: auto;
 }
 
 .subdonacion1 img{
     width: 100%;
-    max-height: 225px;
+    height: 220px;
     box-sizing: border-box;
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 
 /* Thumbnails noticias*/
 .thumbnail{
-    height:210px; 
+    min-height:245px; 
 }
 
 .thumbnail h5{
@@ -393,8 +393,14 @@ footer .container{
     padding: 0px 10px 0 0;
 }
 
-/* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) { ... }
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md-min) { ... }
+@media (max-width: 991px){
+    .circle{
+        margin-top:25px;
+    }
+    
+    /* thumbnail */
+    .thumbnail{
+        min-height: initial; 
+        height: 100%;
+    }
+ }
