--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:hover{
     background-color: white;
 }
 
-.icon-bar{
+.navbar-default .navbar-toggle .icon-bar{
     background-color: white;
 }
 
@@ -410,25 +410,46 @@ footer .container{
     
     /* thumbnail */
     .thumbnail{
-        min-height: initial; 
-        height: 100%;
+        height: 230px;
     }
  }
 
  @media (max-width: 768px){
-     .carousel-background .container h1{
-         font-size: 35px;
-         text-align: center
-     }
-     .carousel-background .container h2{
-         text-align: center;
-         padding-left: 0;
-     }
+    .carousel-background .container h1{
+        font-size: 35px;
+        text-align: center
+ }
+    .carousel-background .container h2{
+        text-align: center;
+        padding-left: 0;
+    }
      .carousel-caption {
-         width: 100%;
-         right: initial;
-         left: initial;
-         padding: 15px;
+        width: 100%;
+        right: initial;
+        left: initial;
+        padding: 15px;
+    }
+    .parrafos {
+        text-align: center
+    }
+
+    .thumbnail{
+        min-height: initial;
+        height: 100%;
+    }
+
+    /* footer */
+    footer{
+        height: 100%;
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+    footer .container{
+        padding-bottom: 25px;
+    }
+    .navbar-form{
+        padding-right: 15px;
+        padding-left:15px;
      }
 
 
